# foragerr

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md
backend/: pyproject.toml
backend/src/foragerr/: __init__.py  app.py  config.py  config_migrations.py  keystore.py  logging.py  logging_buffer.py  naming.py  releases.py  spa.py
backend/tests/: conftest.py  flows_support.py  http_support.py  opds_support.py  test_api_errors.py  test_api_paging.py  test_app.py  test_auth_none.py  test_blocklist_api.py  test_comicvine_credential_resource.py  test_command_api.py  test_command_flows_api.py  test_commands_queue.py  test_commands_recovery.py  test_commands_workers.py  test_config.py  test_config_migrations.py  test_config_pse_limits.py  test_config_resources.py  test_containment_api.py  test_convert_api.py  test_crash_fault_injection.py  test_creator_bibliography_migration.py  test_db_backup.py  test_db_backup_command.py  test_db_engine.py  test_db_integrity.py  test_db_migrations.py  test_db_models.py  test_db_restore.py  test_db_write_session.py  test_deploy_container.py  test_deployment_docs.py  test_drain.py  test_e2e_marker.py  test_event_bus.py  test_first_run_seeding.py  test_fix_revision_migration.py  test_health.py  test_health_service.py  (+56 more)
backend/tests/auth/: test_auth_bootstrap.py  test_auth_credentials.py  test_auth_csrf_ws.py  test_auth_opds_cache.py  test_auth_passwords.py  test_auth_perimeter.py  test_auth_ratelimit.py  test_auth_ratelimit_enforcement.py  test_auth_reseed.py  test_auth_sessions.py
backend/tests/creators/: conftest.py  test_backfill.py  test_bibliography.py  test_bibliography_api.py  test_creators_api.py  test_credits_mapping.py  test_migration_role_vocabulary.py  test_reconcile.py  test_role_normalization.py  test_unseed.py
backend/tests/ddl/: ddl_support.py  test_ddl_adapter.py  test_ddl_client.py  test_ddl_download.py  test_ddl_links.py  test_ddl_politeness.py  test_ddl_queue.py  test_ddl_search_provider.py  test_ddl_security.py  test_ddl_verify.py
backend/tests/downloads/: downloads_support.py  test_blocklist_pubdate.py  test_client_contract.py  test_downloadclient_crud_api.py  test_failure_loop.py  test_grab_live.py  test_history_writers.py  test_pathmap.py  test_process_imports.py  test_provider_api.py  test_queue_api.py  test_resolver.py  test_sab_container.py  test_sabnzbd_grab.py  test_sabnzbd_polling.py  test_stores.py  test_tracking.py  test_transient_outage.py  tracking_support.py
backend/tests/importer/: _archives.py  conftest.py  test_comicinfo_tagging.py  test_convert_cbr.py  test_decisions.py  test_duplicate_dump.py  test_evidence.py  test_fileops.py  test_history.py  (+11 more)
(+1185 files in other folders)
