[project]
name = "foragerr"
version = "0.1.0"
description = "foragerr backend (comic library manager)"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foragerr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["req(id): maps test to requirement"]
