[project]
name = "foragerr"
version = "0.9.1"
description = "Sonarr-style comic library management backend"
license = "GPL-3.0-or-later"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "pyyaml>=6.0",
    "defusedxml>=0.7",
    "websockets>=13",
    "pillow>=11,<12",
    "cryptography>=43,<47",
    "rarfile>=4.3,<5",
]

[project.scripts]
foragerr = "foragerr.app:main"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foragerr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "req(id): maps test to requirement",
    "docker: integration test that requires a docker daemon (skipped by default)",
    "live: integration test that requires live news-server credentials (skipped by default)",
    "soak: slow perf/budget test gated on FORAGERR_RUN_SOAK=1 (skipped by default)",
]
